--- a/TestCases/dumbCHT/system/snappyStep.toml
+++ b/TestCases/dumbCHT/system/snappyStep.toml
@@ -1,9 +1,9 @@
 [MESH]
-MeshSizeMax = .005
+MeshSizeMax = 0.005
 MeshSizeMin = 0
 MeshSizeFactor = 1
-MeshSizeFromCurvature = 0
-MeshAlgorithm = 11
+MeshSizeFromCurvature = 90
+MeshAlgorithm = 6
 # 1: MeshAdapt, 2: Automatic, 3: Initial mesh only, 5: Delaunay, 6: Frontal-Delaunay, 7: BAMG, 8: Frontal-Delaunay for Quads, 9: Packing of Parallelograms, 11: Quasi-structured Quad
 # GMSH default is 6: Frontal-Dlaunay
 
