--- a/TestCases/pointInMeshNotCOM/system/snappyStep.toml
+++ b/TestCases/pointInMeshNotCOM/system/snappyStep.toml
@@ -1,8 +1,8 @@
 [MESH]
-MeshSizeMax = .5
+MeshSizeMax = 0.5
 MeshSizeMin = 0
 MeshSizeFactor = 1
-MeshSizeFromCurvature = 0
+MeshSizeFromCurvature = 90
 MeshAlgorithm = 6
 # 1: MeshAdapt, 2: Automatic, 3: Initial mesh only, 5: Delaunay, 6: Frontal-Delaunay, 7: BAMG, 8: Frontal-Delaunay for Quads, 9: Packing of Parallelograms, 11: Quasi-structured Quad
 # GMSH default is 6: Frontal-Dlaunay
