--- a/Examples/HeatExchanger/system/snappyStep.toml
+++ b/Examples/HeatExchanger/system/snappyStep.toml
@@ -6,6 +6,8 @@ MeshSizeFromCurvature = 90
 MeshAlgorithm = 6
 # 1: MeshAdapt, 2: Automatic, 3: Initial mesh only, 5: Delaunay, 6: Frontal-Delaunay, 7: BAMG, 8: Frontal-Delaunay for Quads, 9: Packing of Parallelograms, 11: Quasi-structured Quad
 # GMSH default is 6: Frontal-Dlaunay
+EdgeMesh = true
+# generates edge mesh files.
 
 [GEOMETRY] # Not implimented yet
 Scaling = 1
