Implemented foamLib based functions
replaced the functions that write foamDictionary commands with functions that use foamlib

fixed some issues with fomalib based functions

updated test cases to snappyStepDict config files

partially tested

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "SnappySTEP"
 version = "0.0.1"
 
 [project.scripts]
-snappySTEP = "snappy_step:mainFunc"
+snappyStep = "snappy_step:mainFunc"
+snappyStepConfig = "snappy_step:write_snappy_step_dict_template"
 
 
 [build-system]
