--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "SnappySTEP"
 version = "0.0.1"
 
 [project.scripts]
-snappyStep = "snappy_step:mainFunc"
+snappyStep = "snappy_step:main_func"
 snappyStepConfig = "snappy_step:write_snappy_step_dict_template"
 
 
